--- a/public/main.css
+++ b/public/main.css
@@ -85,19 +85,25 @@ body {
 }
 
 .action-btn:hover {
-  opacity: 0.9;
+  background: #dedddd !important;
+  color: #f34023 !important;
+  text-decoration: none;
+  font-weight: bold;
+  -webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
+  clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
 }
 
 .action-link {
   display: block;
   padding: 10px 0;
   border: none !important;
-  background: #f34023;
+  background: -webkit-gradient(linear, left top, right top, from(#f34023), to(#f66a53));
+  background: linear-gradient(90deg, #f34023, #f66a53);
   color: white;
   outline: none;
   cursor: pointer;
-  -webkit-transition: 0.2s ease-in;
-  transition: 0.2s ease-in;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
   opacity: 1;
   z-index: 5;
   width: 250px;
@@ -108,16 +114,34 @@ body {
   clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
 }
 
-.portfolio-link {
-  margin-left: 21%;
-  margin-top: 6.35%;
+.action-link:before {
+  border-radius: inherit;
+  background-image: -webkit-gradient(linear, right top, left top, from(#f34023), to(#f66a53));
+  background-image: linear-gradient(270deg, #f34023, #f66a53);
+  content: "";
+  display: block;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  width: 100%;
+  z-index: -100;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.action-link:hover:before {
+  opacity: 1;
 }
 
 .action-link:hover {
-  background: #f2f2f2 !important;
-  color: #f34023 !important;
+  color: #f1f1f1 !important;
   text-decoration: none;
-  font-weight: bold;
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  -webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
+  clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
 }
 
 /*
@@ -142,11 +166,29 @@ body {
 .fp-controlArrow.fp-next {
   right: 50px;
   border-color: transparent transparent transparent #1b1b1b;
+  -webkit-transition: ease-in 0.15s;
+  transition: ease-in 0.15s;
+}
+
+.fp-controlArrow.fp-next:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  border-color: transparent transparent transparent #f34023;
+  opacity: 0.9;
 }
 
 .fp-controlArrow.fp-prev {
   left: 50px;
   border-color: transparent #1b1b1b transparent transparent;
+  -webkit-transition: ease-in 0.15s;
+  transition: ease-in 0.15s;
+}
+
+.fp-controlArrow.fp-prev:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  border-color: transparent #f34023 transparent transparent;
+  opacity: 0.9;
 }
 
 input,
@@ -200,9 +242,9 @@ select:-webkit-autofill {
   font-family: "Montserrat";
   font-size: 1.5em;
   margin-left: 3%;
-  color: #f2f2f2 !important;
-  -webkit-transition: ease-in-out 0.3s;
-  transition: ease-in-out 0.3s;
+  color: #dedddd !important;
+  -webkit-transition: ease-in-out 0.2s;
+  transition: ease-in-out 0.2s;
   /* causes brand to slide in */
   padding: 0;
 }
@@ -232,9 +274,9 @@ select:-webkit-autofill {
 }
 
 .navbar-nav li a i {
-  color: #f2f2f2;
-  -webkit-transition: ease-in-out 0.3s;
-  transition: ease-in-out 0.3s;
+  color: #dedddd;
+  -webkit-transition: ease-in-out 0.2s;
+  transition: ease-in-out 0.2s;
   font-size: 1.5em;
 }
 
@@ -265,23 +307,52 @@ select:-webkit-autofill {
   position: relative;
 }
 
+.hero h1 {
+  /*background: linear-gradient(to top, color(main), color(main-light));
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;*/
+  margin-bottom: 15px;
+}
+
+.hero h2 {
+  color: #f1f1f1;
+  font-size: 30px;
+  text-indent: 50px;
+}
+
 .hero h3 {
   font-size: 22px;
-  color: #f34023;
-  opacity: 0.85;
-  margin-top: 10%;
+  color: #f1f1f1;
+  opacity: 0.9;
+  margin-top: 7%;
   margin-left: 13%;
+  margin-bottom: 15px;
 }
 
 .hero h3 b {
   font-size: 28px;
+  color: #f66a53;
+  /*background: linear-gradient(to top, color(main), color(main-light));
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;*/
+}
+
+.hero h3 i {
+  font-size: 40px;
+  font-style: normal;
+  color: #f34023;
+}
+
+.hero .portfolio-link {
+  margin-left: 25%;
+  margin-top: 1em;
 }
 
 .scroll-indicator {
   height: 100px;
   position: absolute;
-  left: 50%;
-  top: 80%;
+  left: 31.5%;
+  top: 61%;
 }
 
 .scroll-indicator::before {
@@ -325,7 +396,7 @@ select:-webkit-autofill {
 }
 
 .hero-title {
-  font-size: 8rem;
+  font-size: 7.5rem;
   font-family: "Montserrat";
   font-weight: bold;
   color: #f34023;
@@ -341,7 +412,7 @@ select:-webkit-autofill {
 
 .hero-secondary-title {
   color: #f34023;
-  opacity: 0.9;
+  opacity: 0.95;
   font-size: 3.5rem;
   width: 50%;
   margin-left: 13%;
@@ -355,7 +426,7 @@ select:-webkit-autofill {
 }
 
 #skills-section .bg-clipper {
-  height: 100%;
+  height: 102%;
   background-color: #080808;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 95%, 22% 93%, 0 90%);
           clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 95%, 22% 93%, 0 90%);
@@ -419,7 +490,7 @@ select:-webkit-autofill {
 #skills-section .skills-wrapper .wrapper-icon label {
   display: block;
   text-align: center;
-  color: #f2f2f2;
+  color: #dedddd;
 }
 
 #skills-section .skills-wrapper .wrapper-icon .skill-icon {
@@ -499,7 +570,7 @@ select:-webkit-autofill {
 
 #portfolio-section .portfolio-thumbnail-wrapper {
   padding: 10px;
-  background-color: #1b1b1b;
+  background-color: #dedddd;
 }
 
 #portfolio-section .portfolio-thumbnail-wrapper img {
