--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,12 +16,12 @@
 				</ul>
 			</nav>
 
-			<h3>Hi, Im a <b>{ fullstack web developer }</b> and my name is</h3>
+			<h3>Hi, Im a <i>{</i><b> fullstack web developer </b><i>}</i> and my name is</h3>
 			<h1 class="hero-title">Andréas Blin</h1>
 			<h2 class="hero-secondary-title">I will build the website you've been dreaming of</h2>
 
+			<!--<a href="#portfolio" class="action-link portfolio-link"><span class="button-helper"></span>Portfolio</a>-->
 			<a href="#portfolio" class="action-link portfolio-link">Portfolio</a>
-
 			<img src="/svg/undraw_freelancer.svg" class="freelancer-svg" alt="Freelance Illustration" />
 			<div class="scroll-indicator"></div>
 		</div>
