--- a/public/main.css
+++ b/public/main.css
@@ -69,6 +69,8 @@ body {
 
 .action-btn {
   display: block;
+  background: -webkit-gradient(linear, left top, right top, from(#f34023), to(#f66a53));
+  background: linear-gradient(90deg, #f34023, #f66a53);
   width: 100%;
   height: 50px;
   border: none !important;
@@ -84,9 +86,29 @@ body {
   clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
 }
 
+.action-btn:before {
+  border-radius: inherit;
+  background-image: -webkit-gradient(linear, right top, left top, from(#f34023), to(#f66a53));
+  background-image: linear-gradient(270deg, #f34023, #f66a53);
+  content: "";
+  display: block;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  width: 100%;
+  z-index: -100;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.action-btn:hover:before {
+  opacity: 1;
+}
+
 .action-btn:hover {
-  background: #dedddd !important;
-  color: #f34023 !important;
+  color: #f1f1f1 !important;
   text-decoration: none;
   font-weight: bold;
   -webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
@@ -142,19 +164,6 @@ body {
           transform: scale(1.05);
   -webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
   clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
-}
-
-/*
-.action-link.inverted,
-.action-btn.inverted {
-	background: color(dark-shade-light) !important;
-	color: color(main) !important;
-}*/
-.action-link.inverted:hover,
-.action-btn.inverted:hover {
-  background: #1b1b1b !important;
-  color: #f34023 !important;
-  font-weight: bold;
 }
 
 .fp-table {
@@ -558,10 +567,16 @@ select:-webkit-autofill {
   background: linear-gradient(to bottom, #f1f1f1 50%, #080808 50%);
 }
 
+#portfolio-section h1 a {
+  color: #f34023;
+  text-decoration: none;
+}
+
 #portfolio-section .bg-clipper {
   background-color: #f1f1f1;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 73%, 71% 77%, 29% 79%, 0 81%);
           clip-path: polygon(0 0, 100% 0, 100% 73%, 71% 77%, 29% 79%, 0 81%);
+  height: 118%;
 }
 
 #portfolio-section .hero-title {
@@ -634,8 +649,7 @@ select:-webkit-autofill {
 }
 
 #portfolio-section .portfolio-item .portfolio-info {
-  margin-top: 1rem;
-  padding: 1.5rem;
+  padding: 0 2rem 0 2rem;
   height: auto !important;
 }
 
