--- a/public/main.scss
+++ b/public/main.scss
@@ -84,6 +84,7 @@ body {
 
 .action-btn {
 	display: block;
+	background: linear-gradient(90deg, color(main), color(main-light));
 	width: 100%;
 	height: 50px;
 	border: none !important;
@@ -97,11 +98,31 @@ body {
 
 	-webkit-clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
 	clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
+
+	&:before {
+		border-radius: inherit;
+		background-image: linear-gradient(270deg, color(main), color(main-light));
+		content: "";
+		display: block;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		opacity: 0;
+		width: 100%;
+		z-index: -100;
+		transition: opacity 0.3s ease-in-out;
+	}
+
+	&:hover {
+		&:before {
+			opacity: 1;
+		}
+	}
 }
 
 .action-btn:hover {
-	background: color(light-gray) !important;
-	color: color(main) !important;
+	color: color(light-shade) !important;
 	text-decoration: none;
 	font-weight: bold;
 
@@ -159,20 +180,6 @@ body {
 
 	-webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
 	clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
-}
-
-/*
-.action-link.inverted,
-.action-btn.inverted {
-	background: color(dark-shade-light) !important;
-	color: color(main) !important;
-}*/
-
-.action-link.inverted:hover,
-.action-btn.inverted:hover {
-	background: color(dark-shade-light) !important;
-	color: color(main) !important;
-	font-weight: bold;
 }
 
 .fp-table {
@@ -526,11 +533,16 @@ select:-webkit-autofill {
 }
 
 #portfolio-section {
+	h1 a {
+		color: color(main);
+		text-decoration: none;
+	}
 	background: linear-gradient(to bottom, color(light-shade) 50%, color(dark-shade) 50%);
 
 	.bg-clipper {
 		background-color: color(light-shade);
 		clip-path: polygon(0 0, 100% 0, 100% 73%, 71% 77%, 29% 79%, 0 81%);
+		height: 118%;
 	}
 
 	.hero-title {
@@ -593,8 +605,7 @@ select:-webkit-autofill {
 		}
 
 		.portfolio-info {
-			margin-top: 1rem;
-			padding: 1.5rem;
+			padding: 0 2rem 0 2rem;
 			height: auto !important;
 		}
 	}
