--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,23 +28,28 @@
 
 	<section class="section main-section even" id="portfolio-section" data-anchor="portfolio">
 		<div class="bg-clipper">
-			<div class="slide">
+			<div class="slide" id="maral">
 				<h1 class="hero-title mt-4 mb-0"><a href="https://www.maral.fr" target="_blank">Maral.fr</a></h1>
 
 				<div class="portfolio-item row">
 					<div class="portfolio-info col-md-4 offset-md-1">
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor dui quis maximus feugiat. Duis sit amet sapien aliquet, hendrerit sem non, commodo arcu. Vivamus semper, felis ac
-							condimentum ultricies, odio est elementum turpis, et fringilla orci velit a lorem.
+							An <b>e-commerce</b> website allowing customers to purchase paintings or replicas of these paintings using <b>Pwinty API</b> to automatically handle replicas orders. Clients can pay for
+							their orders by card using the <b>Stripe API</b>.
 						</p>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor dui quis maximus feugiat. Duis sit amet sapien aliquet, hendrerit sem non, commodo arcu. Vivamus semper, felis ac
-							condimentum ultricies, odio est elementum turpis, et fringilla orci velit a lorem.
+							I used <b>Bootstrap</b> for the main layout of the front-end design, although most of the <b>CSS</b> has been custom-made to the client's taste. The Node.js back-end is built around a
+							<b>custom API</b> to manage requests and orders seamlessly.
 						</p>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor dui quis maximus feugiat. Duis sit amet sapien aliquet, hendrerit sem non, commodo arcu. Vivamus semper, felis ac
-							condimentum ultricies, odio est elementum turpis, et fringilla orci velit a lorem.
-						</p>
+						<p>Includes an admin interface that allows the client to manage the content of the website and the orders very easily, with just a few clicks.</p>
+
+						<ul>
+							<li>NodeJS</li>
+							<li>API</li>
+							<li>Pwinty</li>
+							<li>Stripe</li>
+							<li>Bootstrap</li>
+						</ul>
 						<div class="skill-call-wrapper">
 							<a href="#skills" class="action-link m-auto">Skills</a>
 						</div>
@@ -52,13 +57,6 @@
 
 					<div class="portfolio-thumbnail-wrapper col-md-6">
 						<a href="https://www.maral.fr" target="_blank"><img class="w-100" src="/img/maral_thumbnail.jpg" alt="Maral.fr Screenshot" /></a>
-						<ul>
-							<li>NodeJS</li>
-							<li>API</li>
-							<li>Bootstrap</li>
-							<li>HTML</li>
-							<li>CSS</li>
-						</ul>
 					</div>
 				</div>
 			</div>
@@ -81,37 +79,43 @@
 						<h1>{</h1>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/javascript_icon.png" alt="Javascript" />
+								<img class="skill-icon" src="/img/icons/white/javascript_icon.png" alt="Javascript" />
 							</div>
 							<label>Javascript</label>
 						</div>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/html_icon.png" alt="HTML5" />
+								<img class="skill-icon" src="/img/icons/white/jquery_icon.png" alt="JQuery" />
+							</div>
+							<label>JQuery</label>
+						</div>
+						<div class="wrapper-icon">
+							<div>
+								<img class="skill-icon" src="/img/icons/white/html_icon.png" alt="HTML5" />
 							</div>
 							<label>HTML5</label>
 						</div>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/css_icon.png" alt="CSS3" />
+								<img class="skill-icon" src="/img/icons/white/css_icon.png" alt="CSS3" />
 							</div>
 							<label>CSS3</label>
 						</div>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/sass_icon.png" alt="SASS" />
+								<img class="skill-icon" src="/img/icons/white/sass_icon.png" alt="SASS" />
 							</div>
 							<label>SASS</label>
 						</div>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/vuejs_icon.png" alt="Vuejs" />
+								<img class="skill-icon" src="/img/icons/white/vuejs_icon.png" alt="Vuejs" />
 							</div>
 							<label>Vue.js</label>
 						</div>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/bootstrap_icon.png" alt="Bootstrap" />
+								<img class="skill-icon" src="/img/icons/white/bootstrap_icon.png" alt="Bootstrap" />
 							</div>
 							<label>Bootstrap</label>
 						</div>
@@ -124,31 +128,31 @@
 							<h1>{</h1>
 							<div class="wrapper-icon">
 								<div>
-									<img class="skill-icon" src="/img/icons/nodejs_icon.png" alt="NodeJS" />
+									<img class="skill-icon" src="/img/icons/white/nodejs_icon.png" alt="NodeJS" />
 								</div>
 								<label>NodeJS</label>
 							</div>
 							<div class="wrapper-icon">
 								<div>
-									<img class="skill-icon" src="/img/icons/css_icon.png" alt="PHP" />
+									<img class="skill-icon" src="/img/icons/white/php_icon.png" alt="PHP" />
 								</div>
 								<label>PHP</label>
 							</div>
 							<div class="wrapper-icon">
 								<div>
-									<img class="skill-icon" src="/img/icons/database_icon.png" alt="Database SQL/noSQL" />
+									<img class="skill-icon" src="/img/icons/white/database_icon.png" alt="Database SQL/noSQL" />
 								</div>
 								<label>SQL / noSQL</label>
 							</div>
 							<div class="wrapper-icon">
 								<div>
-									<img class="skill-icon" src="/img/icons/api_icon.png" alt="API" />
+									<img class="skill-icon" src="/img/icons/white/api_icon.png" alt="API" />
 								</div>
 								<label>API</label>
 							</div>
 							<div class="wrapper-icon">
 								<div>
-									<img class="skill-icon" src="/img/icons/s3_icon.png" alt="S3" />
+									<img class="skill-icon" src="/img/icons/white/s3_icon.png" alt="S3" />
 								</div>
 								<label>S3</label>
 							</div>
@@ -162,20 +166,20 @@
 							<h1>{</h1>
 							<div class="wrapper-icon">
 								<div>
-									<img class="skill-icon" src="/img/icons/git_icon.png" alt="Git" />
+									<img class="skill-icon" src="/img/icons/white/git_icon.png" alt="Git" />
 								</div>
 								<label>Git</label>
 							</div>
 							<div class="wrapper-icon">
 								<div>
-									<img class="skill-icon" src="/img/icons/docker_icon.png" alt="Docker" />
+									<img class="skill-icon" src="/img/icons/white/docker_icon.png" alt="Docker" />
 								</div>
 								<label>Docker</label>
 							</div>
 
 							<div class="wrapper-icon">
 								<div>
-									<img class="skill-icon" src="/img/icons/console_icon.png" alt="Shell" />
+									<img class="skill-icon" src="/img/icons/white/console_icon.png" alt="Shell" />
 								</div>
 								<label>Shell</label>
 							</div>
@@ -238,6 +242,7 @@
 	});
 </script>
 
+<script src="/scripts/icon_hover.js"></script>
 <%- include('partials/footer'); -%>
 
 <!--
