added portfolio placeholder text, added links for maral portfolio

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,12 +34,13 @@
 				<div class="portfolio-item row">
 					<div class="portfolio-info col-md-4 offset-md-1">
 						<p>
-							An <b>e-commerce</b> website allowing customers to purchase paintings or replicas of these paintings using <b>Pwinty API</b> to automatically handle replicas orders. Clients can pay for
-							their orders by card using the <b>Stripe API</b>.
+							An <b>e-commerce</b> website allowing customers to purchase paintings or replicas of these paintings using <b><a href="https://pwinty.com/" target="_blank">Pwinty API</a></b> to
+							automatically handle replicas orders. Clients can pay for their orders by card using the <b><a href="https://stripe.com/" target="_blank">Stripe API</a></b
+							>.
 						</p>
 						<p>
-							I used <b>Bootstrap</b> for the main layout of the front-end design, although most of the <b>CSS</b> has been custom-made to the client's taste. The Node.js back-end is built around a
-							<b>custom API</b> to manage requests and orders seamlessly.
+							I used <b><a href="https://getbootstrap.com/" target="_blank">Bootstrap</a></b> for the main layout of the front-end design, although most of the <b>CSS</b> has been custom-made to the
+							client's taste. The Node.js back-end is built around a <b>custom API</b> to manage requests and orders seamlessly.
 						</p>
 						<p>Includes an admin interface that allows the client to manage the content of the website and the orders very easily, with just a few clicks.</p>
 
@@ -61,9 +62,13 @@
 				</div>
 			</div>
 
-			<div class="slide"></div>
+			<div class="slide">
+				<h1 class="hero-title mt-4 mb-0"><a href="#" target="_blank">Some project</a></h1>
+			</div>
 
-			<div class="slide"></div>
+			<div class="slide">
+				<h1 class="hero-title mt-4 mb-0"><a href="#" target="_blank">Some other project</a></h1>
+			</div>
 		</div>
 	</section>
 
@@ -210,7 +215,7 @@
 					</div>
 					<div class="col-md-12 mt-2">
 						<label class="control-label">Message</label>
-						<textarea class="mb-0" id="content" rows="5" name="content" placeholder="Write your message here...." required></textarea>
+						<textarea class="mb-0" id="content" rows="8" name="content" placeholder="Write your message here...." required></textarea>
 					</div>
 				</div>
 				<input type="submit" class="action-btn" value="Send" id="submit-contact" />
