--- a/public/main.css
+++ b/public/main.css
@@ -217,6 +217,10 @@ textarea {
   clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
 }
 
+textarea {
+  resize: none;
+}
+
 input:focus,
 textarea:focus,
 input:-webkit-autofill:focus,
@@ -542,7 +546,7 @@ select:-webkit-autofill {
 #contact-section .contact-footer {
   height: 200px;
   width: 100%;
-  margin-top: 110px;
+  margin-top: 50px;
   width: 100%;
 }
 
