--- a/public/main.scss
+++ b/public/main.scss
@@ -227,6 +227,10 @@ textarea {
 	clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
 }
 
+textarea {
+	resize: none;
+}
+
 input:focus,
 textarea:focus,
 input:-webkit-autofill:focus,
@@ -515,7 +519,7 @@ select:-webkit-autofill {
 	.contact-footer {
 		height: 200px;
 		width: 100%;
-		margin-top: 110px;
+		margin-top: 50px;
 		width: 100%;
 
 		ul {
