--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>ablin42</title>
+		<meta name="csrf-token" content="<%= locals.csrfToken %>" />
+		<title>ablin@dev</title>
 
 		<!-- JQuery -->
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -28,7 +29,7 @@
 		<!-- FontAwesome Icons -->
 		<script src="https://kit.fontawesome.com/ba18cbd714.js"></script>
 
-		<script src="/scripts/core/main.js"></script>
+		<script src="/scripts/core/alert.js"></script>
 		<link rel="stylesheet" href="/main.css" />
 	</head>
 	<body></body>
