--- a/public/main.scss
+++ b/public/main.scss
@@ -184,6 +184,19 @@ body {
 	clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
 }
 
+.contact-alert-wrapper {
+	height: 50px;
+}
+
+.alert {
+	margin-bottom: 0;
+	border-radius: 0;
+	border: none;
+
+	-webkit-clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
+	clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
+}
+
 .fp-table {
 	display: flex !important;
 }
@@ -595,7 +608,7 @@ select:-webkit-autofill {
 			}
 
 			li:hover {
-				transform: scale(1.1);
+				transform: scale(1.3);
 				background-color: color(light-shade);
 			}
 		}
