--- a/public/main.scss
+++ b/public/main.scss
@@ -372,7 +372,31 @@ select:-webkit-autofill {
 	.portfolio-link {
 		margin-left: 25%;
 		margin-top: 1em;
+
+		@keyframes portfolioLinkAnim {
+			0% {
+				transform: translateX(-800px);
+				opacity: 0;
+			}
+			32% {
+				transform: rotate(-15deg) translateX(0);
+				opacity: 0.33;
+			}
+			66% {
+				transform: rotate(15deg);
+				opacity: 0.66;
+			}
+			100% {
+				transform: rotate(0);
+				opacity: 1;
+			}
+		}
 	}
+}
+
+.portfolioLinkAnim {
+	opacity: 0;
+	animation: portfolioLinkAnim 0.7s 1 1.4s ease forwards;
 }
 
 .scroll-indicator {
@@ -380,6 +404,25 @@ select:-webkit-autofill {
 	position: absolute;
 	left: 31.5%;
 	top: 61%;
+
+	@keyframes indicatorAnim {
+		0% {
+			transform: translateY(-50px);
+			opacity: 0;
+		}
+		50% {
+			transform: translateY(50px);
+			opacity: 0.5;
+		}
+		100% {
+			opacity: 1;
+		}
+	}
+}
+
+.indicatorAnim {
+	opacity: 0;
+	animation: indicatorAnim 1s 1 1.8s ease forwards;
 }
 
 .scroll-indicator::before {
@@ -422,6 +465,23 @@ select:-webkit-autofill {
 	margin-top: -25px;
 	font-style: italic;
 	display: inline-block;
+	opacity: 1;
+}
+
+.heroAnim {
+	opacity: 0;
+	animation: heroAnim 1s 1 0.6s ease forwards;
+}
+
+@keyframes heroAnim {
+	0% {
+		transform: translateX(-150%);
+		opacity: 0;
+	}
+	100% {
+		transform: translateX(0);
+		opacity: 1;
+	}
 }
 
 .main-section.even .hero-title {
@@ -510,7 +570,43 @@ select:-webkit-autofill {
 	}
 }
 
+.firstHeroAnim {
+	opacity: 0;
+	animation: firstHeroAnim 0.6s 1 0s ease;
+}
+
+.lastHeroAnim {
+	opacity: 0;
+	animation: lastHeroAnim 0.8s 1 1.2s ease forwards;
+}
+
 #landing-section {
+	h3 {
+		@keyframes firstHeroAnim {
+			0% {
+				transform: translateX(-55%);
+				opacity: 0;
+			}
+			100% {
+				transform: translateX(0);
+				opacity: 0.9;
+			}
+		}
+	}
+
+	h2 {
+		@keyframes lastHeroAnim {
+			0% {
+				transform: translateX(-110%);
+				opacity: 0;
+			}
+			100% {
+				transform: translateX(0);
+				opacity: 0.95;
+			}
+		}
+	}
+
 	background-color: color(light-shade);
 
 	.bg-clipper {
