--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -26,6 +26,8 @@
 		<script src="/scripts/fullpage.min.js"></script>
 		<link rel="stylesheet" href="/fullpage.min.css" />
 
+		<script src="https://cdn.jsdelivr.net/npm/lax.js"></script>
+
 		<!-- FontAwesome Icons -->
 		<script src="https://kit.fontawesome.com/ba18cbd714.js"></script>
 
